--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2",
-    "node":"^16.13.0."
+    "node":"^16.13.0"
   },
   "scripts": {
     "start": "react-scripts start",
